--- a/package.json
+++ b/package.json
@@ -1,62 +1,60 @@
 {
   "name": "gc-spread-sheets-designer",
-  "version": "14.0.3",
+  "version": "16.2.3",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "node:build": "node --max_old_space_size=24576 node_modules/@angular/cli/bin/ng build"
   },
   "private": true,
   "dependencies": {
-    "@grapecity/spread-sheets": "14.0.3",
-    "@grapecity/spread-excelio": "14.0.3",
-    "@grapecity/spread-sheets-barcode": "14.0.3",
-    "@grapecity/spread-sheets-charts": "14.0.3",
-    "@grapecity/spread-sheets-languagepackages": "14.0.3",
-    "@grapecity/spread-sheets-print": "14.0.3",
-    "@grapecity/spread-sheets-pdf": "14.0.3",
-    "@grapecity/spread-sheets-shapes": "14.0.3",
-    "@grapecity/spread-sheets-pivot-addon": "14.0.3",
-    "@grapecity/spread-sheets-resources-ja": "14.0.3",
-    "@grapecity/spread-sheets-resources-ko": "14.0.3",
-    "@grapecity/spread-sheets-resources-zh": "14.0.3",
-    "@grapecity/spread-sheets-designer": "14.0.3",
-    "@grapecity/spread-sheets-designer-resources-en": "14.0.3",
-    "@grapecity/spread-sheets-designer-angular": "14.0.3",
-    "@angular/animations": "~10.0.4",
-    "@angular/common": "~10.0.4",
-    "@angular/compiler": "~10.0.4",
-    "@angular/core": "~10.0.4",
-    "@angular/forms": "~10.0.4",
-    "@angular/platform-browser": "~10.0.4",
-    "@angular/platform-browser-dynamic": "~10.0.4",
-    "@angular/router": "~10.0.4",
-    "rxjs": "~6.5.5",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "@grapecity/spread-sheets": "16.2.3",
+    "@grapecity/spread-excelio": "16.2.3",
+    "@grapecity/spread-sheets-barcode": "16.2.3",
+    "@grapecity/spread-sheets-charts": "16.2.3",
+    "@grapecity/spread-sheets-languagepackages": "16.2.3",
+    "@grapecity/spread-sheets-print": "16.2.3",
+    "@grapecity/spread-sheets-pdf": "16.2.3",
+    "@grapecity/spread-sheets-shapes": "16.2.3",
+    "@grapecity/spread-sheets-io": "16.2.3",
+    "@grapecity/spread-sheets-pivot-addon": "16.2.3",
+    "@grapecity/spread-sheets-resources-ja": "16.2.3",
+    "@grapecity/spread-sheets-resources-ko": "16.2.3",
+    "@grapecity/spread-sheets-resources-zh": "16.2.3",
+    "@grapecity/spread-sheets-designer": "16.2.3",
+    "@grapecity/spread-sheets-designer-resources-en": "16.2.3",
+    "@grapecity/spread-sheets-designer-angular": "16.2.3",
+    "@angular/animations": "~16.2.8",
+    "@angular/common": "~16.2.8",
+    "@angular/compiler": "~16.2.8",
+    "@angular/core": "~16.2.8",
+    "@angular/forms": "~16.2.8",
+    "@angular/platform-browser": "~16.2.8",
+    "@angular/platform-browser-dynamic": "~16.2.8",
+    "@angular/router": "~16.2.8",
+    "rxjs": "~7.8.1",
+    "tslib": "^2.6.2",
+    "zone.js": "~0.13.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.3",
-    "@angular/cli": "~10.0.3",
-    "@angular/compiler-cli": "~10.0.4",
-    "@types/jasmine": "~3.5.0",
+    "@angular-devkit/build-angular": "^16.2.5",
+    "@angular/cli": "^16.2.6",
+    "@angular/compiler-cli": "~16.2.8",
+    "@types/jasmine": "~4.0.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "jasmine-core": "~4.2.0",
+    "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "ts-loader": "^8.0.2",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "typescript": "~4.9.5"
   }
 }
